# op

./: CMakeLists.txt  README.md
.github/workflows/: build_and_run_tests.yml
include/op/: op.hpp
tests/: CMakeLists.txt  main.cpp  test.cpp
